--- a/src/Pages/Home/a.css
+++ b/src/Pages/Home/a.css
@@ -1,21 +1,29 @@
-.wrapper{
+.parent {
+	height: 50vh;
+	
+  	display: grid;
+  }
+  .child {
+	width: 100%;
+	margin: auto;
+  }
+.wrapp{
+    margin: auto;
     width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border: 3px solid green;
+    padding: 10px;
   }
   
-  .container {
+.container {
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
 
-  .text {
+.text {
     font-family: 'Anton', sans-serif;
-  }
+}
 
   #sidenav-overlay { margin-left: 300px; }
   #sidenav-overlay { z-index: 1; }
